python/testData/quickFixes/PyTypeHintsQuickFixTest/parenthesesAndTypingNoArguments.py
from typing import Union

def e(f: <error descr="Generics should be specified through square brackets">Union<caret>()</error>):
    pass